@@ -20,6 +20,8 @@ Ctrlproxy 3.0.3 UNRELEASED
 
 	* Handle 354 response correctly. (#134)
 
+    * Handle responses after forced joins correctly. (#125)
+
   INTERNALS
 
     * Use GIOChannels for reading the motd. 
